--- a/src/pages/_sample.njk
+++ b/src/pages/_sample.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/default.njk' %}
+{% extends './src/layouts/default.njk' %}
 {% set PAGE_DATA = {
   TITLE: 'ページタイトル',
   DESCRIPTION: 'ページ概要',
@@ -28,8 +28,8 @@
 } %}
 
 {# ▼▼▼ コンポーネント読み込み ▼▼▼ #}
-{% from 'components/breadcrumb.njk' import default as BREADCRUMB %}
-{% from 'components/modal.njk' import default as MODAL %}
+{% from './src/components/breadcrumb.njk' import default as BREADCRUMB %}
+{% from './src/components/modal.njk' import default as MODAL %}
 {# ▲▲▲ コンポーネント読み込み ▲▲▲ #}
 
 {% block PAGE_HEAD %}
