--- a/src/components/foot/files.njk
+++ b/src/components/foot/files.njk
@@ -1,3 +1,3 @@
 <!-- ▼▼▼ 読み込みファイル（共通） ▼▼▼ -->
-<script src="/{{ SITE_ROOT }}assets/js/script.js"></script>
+<script type="module" src="@js/script.js"></script>
 <!-- ▲▲▲ 読み込みファイル（共通） ▲▲▲ -->
