--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -43,7 +43,7 @@
   {{ BREADCRUMB(PAGE_DATA.BREADCRUMB_ITEMS) }}
   {# ▲▲▲ パンくず ▲▲▲ #}
   {% raw %}
-    <div id="app"></div>
+    <div id="app"><img src="/assets/vite.svg" alt=""></div>
   {% endraw %}
 {% endblock %}
 
