--- a/src/components/head/files.njk
+++ b/src/components/head/files.njk
@@ -1,3 +1,3 @@
 <!-- ▼▼▼ 読み込みファイル（共通） ▼▼▼ -->
-<link rel="stylesheet" href="@scss/style.scss">
+<link rel="stylesheet" href="@styles/style.scss">
 <!-- ▲▲▲ 読み込みファイル（共通） ▲▲▲ -->
