--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -34,7 +34,7 @@
 
 {% block PAGE_HEAD %}
   <!-- ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ -->
-  <link rel="stylesheet" href="@scss/top.scss">
+  <link rel="stylesheet" href="@styles/style-top.scss">
   <!-- ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ -->
 {% endblock %}
 
@@ -42,9 +42,11 @@
   {# ▼▼▼ パンくず ▼▼▼ #}
   {{ BREADCRUMB(PAGE_DATA.BREADCRUMB_ITEMS) }}
   {# ▲▲▲ パンくず ▲▲▲ #}
-  {% raw %}
-    <div id="app"><img src="/assets/vite.svg" alt=""></div>
-  {% endraw %}
+  <div class="page-top">
+    {% raw %}
+      <div id="app"><img src="/assets/vite.svg" alt=""></div>
+    {% endraw %}
+  </div>
 {% endblock %}
 
 {% block FIX_CONTENT %}
@@ -57,8 +59,8 @@
   <!-- ▲▲▲ 固定要素（モーダルなど） ▲▲▲ -->
 {% endblock %}
 
-{# {% block PAGE_FOOT %}
+{% block PAGE_FOOT %}
   <!-- ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ -->
-  <script src="/{{ SITE_ROOT }}js/sample.js"></script>
+  <script src="/assets/js/top.js"></script>
   <!-- ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ -->
-{% endblock %} #}
+{% endblock %}
