--- a/src/styles/style-top.scss
+++ b/src/styles/style-top.scss
@@ -1,6 +1,6 @@
-@use "./global" as g;
+@use './global' as g;
 
-$BLOCK_NAME: ".page-top";
+$BLOCK_NAME: '.page-top';
 
 #{ $BLOCK_NAME } {
   color: g.$c_text;
