--- a/src/pages/_sample.njk
+++ b/src/pages/_sample.njk
@@ -56,6 +56,6 @@
 
 {# {% block PAGE_FOOT %}
   <!-- ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ -->
-  <script src="/{{ SITE_ROOT }}js/sample.js"></script>
+  <script src="/{{ SITE_ROOT }}js/sample.js" defer></script>
   <!-- ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ -->
 {% endblock %} #}
