--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -43,8 +43,9 @@
   {{ BREADCRUMB(PAGE_DATA.BREADCRUMB_ITEMS) }}
   {# ▲▲▲ パンくず ▲▲▲ #}
   <div class="page-top">
+    <h1>TOP</h1>
     {% raw %}
-      <div id="app"><img src="/assets/vite.svg" alt=""></div>
+      <div id="app"><img src="/assets/vite.svg" alt="" width="1" height="1"></div>
     {% endraw %}
   </div>
 {% endblock %}
@@ -61,6 +62,6 @@
 
 {% block PAGE_FOOT %}
   <!-- ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ -->
-  <script src="/assets/js/top.js"></script>
+  <script src="/assets/js/top.js" defer></script>
   <!-- ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ -->
 {% endblock %}
