--- a/src/components/foot/files.njk
+++ b/src/components/foot/files.njk
@@ -1,3 +1,3 @@
-<!-- ▼▼▼ 読み込みファイル（共通） ▼▼▼ -->
-<script src="@scripts/script.js" defer></script>
-<!-- ▲▲▲ 読み込みファイル（共通） ▲▲▲ -->
+{# ▼▼▼ 読み込みファイル（共通） ▼▼▼ #}
+<script type="module" src="/src/scripts/script.js"></script>
+{# ▲▲▲ 読み込みファイル（共通） ▲▲▲ #}
