--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -33,9 +33,9 @@
 {# ▲▲▲ コンポーネント読み込み ▲▲▲ #}
 
 {% block PAGE_HEAD %}
-  <!-- ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ -->
-  <link rel="stylesheet" href="@styles/style-top.scss">
-  <!-- ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ -->
+  {# ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ #}
+  <link rel="stylesheet" href="/src/styles/style-top.scss">
+  {# ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ #}
 {% endblock %}
 
 {% block PAGE_CONTENT %}
@@ -45,23 +45,23 @@
   <div class="page-top">
     <h1>TOP</h1>
     {% raw %}
-      <div id="app"><img src="/assets/vite.svg" alt="" width="1" height="1"></div>
+      <div id="app"><img src="/assets/img/vite.svg" alt="" width="1" height="1"></div>
     {% endraw %}
   </div>
 {% endblock %}
 
 {% block FIX_CONTENT %}
-  <!-- ▼▼▼ 固定要素（モーダルなど） ▼▼▼ -->
+  {# ▼▼▼ 固定要素（モーダルなど） ▼▼▼ #}
   {# ▼▼▼ モーダル ▼▼▼ #}
   {% call MODAL('modal') %}
     <p>モーダル</p>
   {% endcall %}
   {# ▲▲▲ モーダル ▲▲▲ #}
-  <!-- ▲▲▲ 固定要素（モーダルなど） ▲▲▲ -->
+  {# ▲▲▲ 固定要素（モーダルなど） ▲▲▲ #}
 {% endblock %}
 
 {% block PAGE_FOOT %}
-  <!-- ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ -->
-  <script src="/assets/js/top.js" defer></script>
-  <!-- ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ -->
+  {# ▼▼▼ 読み込みファイル（ページ専用） ▼▼▼ #}
+  <script type="module" src="/src/scripts/top.js"></script>
+  {# ▲▲▲ 読み込みファイル（ページ専用） ▲▲▲ #}
 {% endblock %}
