--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,3 @@
-@use './foundation';
-@use './plugins';
-@use './components';
+@import '@/styles/foundation/+';
+@import '@/styles/plugins/+';
+@import '@/styles/components/+';
